Bug 233335 - Wrong icons selected after pasting files and renaming them (because there exists items with it's names)
Summary: Wrong icons selected after pasting files and renaming them (because there exi...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: investigated
: 276706 285605 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-04-05 12:59 UTC by Michał D. (Emdek)
Modified: 2013-06-26 20:10 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michał D. (Emdek) 2010-04-05 12:59:04 UTC
Version:            (using KDE 4.4.2)
Installed from:    Mandriva RPMs

When pasting files or directories to a directory where already exists items with these names and renaming them using dialog which is shown in that case then after finishing that job wrong items are selected, not these pasted but these with names that they had before renaming.
Comment 1 FiNeX 2010-08-01 15:39:04 UTC
Bug confirmed in KDE SC 4.4.5
Comment 2 Michał D. (Emdek) 2010-09-08 23:28:47 UTC
Still happens, even in trunk...

Version 1.5.9
KDE Platform 4.5.67 (4.6 >= 20100901)
Comment 3 Matthias Fuchs 2011-05-27 19:01:42 UTC
I don't think there is a good way to fix this.

Dolphin does not know that a rename happens as that happens directly in KIO.
Yet the renamed signal can't be accessed as all that happens in KonqOperations and is not exposed.

So one way to fix that would be to abandon KonqOperations usage in Dolphin which would be a lot work and result in duplicated code. Another way would be to modify KonqOperations, though I am not sure if what is needed could be achieved without totally changing it.
Comment 4 Frank Reininghaus 2011-05-28 01:04:31 UTC
Thanks for your good investigations, Matthias!

I've added David Faure to CC, he might be able to tell us if modifying KonqOperations to fix the problem is possible.
Comment 5 Frank Reininghaus 2011-06-30 20:53:41 UTC
*** Bug 276706 has been marked as a duplicate of this bug. ***
Comment 6 Frank Reininghaus 2011-11-06 17:35:43 UTC
*** Bug 285605 has been marked as a duplicate of this bug. ***
Comment 7 Lilian A. Moraru 2012-02-26 23:33:22 UTC
Using Kubuntu 11.10, KDE 4.8, Dolphin 2.0. I can't reproduce the bug because after copying the files, Dolphin doesn't select any file. And it might be a missing feature but anyway, the bug is not valid any more.
Comment 8 Michał D. (Emdek) 2012-02-27 05:54:50 UTC
Kind of. ;-)
Comment 9 Frank Reininghaus 2012-03-05 22:18:23 UTC
(In reply to comment #7)
> Using Kubuntu 11.10, KDE 4.8, Dolphin 2.0. I can't reproduce the bug because
> after copying the files, Dolphin doesn't select any file. And it might be a
> missing feature but anyway, the bug is not valid any more.

You're right, looks like a regression. I've filed a new bug report about it: bug 295389.
Comment 10 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:19:47 UTC
Resetting assignee to default as per bug #305719
Comment 11 Adrián Chaves (Gallaecio) 2012-10-27 11:29:30 UTC
Steps to reproduce:

1. Open a test folder with Dolphin.
2. Create the test files:
    2.1. Open Dolphin’s terminal (F4).
    2.2. Run “mkdir folder ; touch a b folder/b c d”.
    2.3. Close Dolphin’s terminal (F4).
3. In the current folder, select the four empty files (a, b, c, d) and copy them (Ctrl+C).
4. Enter the “folder” folder.
5. Paste the files (Ctrl+V).
    5.1. When asked for a new name for “b”, enter “b2” and hit Enter to continue.

Expected results: The pasted files should be selected after the operation: “a”, “b2”, “c”, “d”.
Actual results: The selected files after the operation are “a” and “b”.
Comment 12 Emmanuel Pescosta 2012-11-16 23:05:50 UTC
Review-Request: https://git.reviewboard.kde.org/r/107351/
Comment 13 Emmanuel Pescosta 2013-01-09 14:18:07 UTC
Git commit fd65a97b0787b23246c9392fdc34173fb604c9ca by Emmanuel Pescosta.
Committed on 09/01/2013 at 15:16.
Pushed by emmanuelp into branch 'master'.

Fix Bug 233335 - Wrong icons selected after pasting files and renaming them (because there exists items with it's  names

Fixed the "same" buggy behavior when dropping files/folders

Select also putted files (PUT operation - SimpleJob) - e.g. Paste content from clipboard
REVIEW: 107351

M  +2    -1    dolphin/src/dolphinmainwindow.cpp
M  +2    -1    dolphin/src/dolphinviewcontainer.cpp
M  +2    -1    dolphin/src/panels/folders/folderspanel.cpp
M  +12   -3    dolphin/src/panels/places/placespanel.cpp
M  +15   -17   dolphin/src/views/dolphinview.cpp
M  +5    -8    dolphin/src/views/dolphinview.h
M  +10   -6    dolphin/src/views/draganddrophelper.cpp
M  +7    -4    dolphin/src/views/draganddrophelper.h
M  +69   -18   lib/konq/konq_operations.cpp
M  +14   -0    lib/konq/konq_operations.h

http://commits.kde.org/kde-baseapps/fd65a97b0787b23246c9392fdc34173fb604c9ca
Comment 14 Emmanuel Pescosta 2013-06-26 20:10:10 UTC
Git commit 09818e519f5f1ea2d079b60a09d757b60c7e753b by Emmanuel Pescosta.
Committed on 26/06/2013 at 20:00.
Pushed by emmanuelp into branch 'master'.

Fix the "dropped files are not selected" regression that has
recently been brought up and that have been caused by review 107351 / commit
fd65a97b0787b23246c9392fdc34173fb604c9ca
FIXED-IN: 4.11.0
REVIEW: 111254

M  +1    -1    dolphin/src/views/dolphinview.cpp

http://commits.kde.org/kde-baseapps/09818e519f5f1ea2d079b60a09d757b60c7e753b