Fix Bug 233335 - Wrong icons selected after pasting files and renaming them (because there exists items with it's  names

Fixed the "same" buggy behavior when dropping files/folders

Select also putted files (PUT operation - SimpleJob) - e.g. Paste content from clipboard

BUG: 233335
REVIEW: 107351